--- a/percolacion/Makefile
+++ b/percolacion/Makefile
@@ -1,2 +1,2 @@
-main: perco.c percola.c imprimir.c llenar.c hoshen.c
-	gcc -o out perco.c percola.c imprimir.c llenar.c hoshen.c
+main: perco.c percola.c imprimir.c llenar.c hoshen.c masa.c
+	gcc -o out perco.c percola.c imprimir.c llenar.c hoshen.c masa.c 
